// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-anchor-beta #render should render component as expected (1) 1`] = `
<gux-anchor-beta table="false">
  <mock:shadow-root>
    <gux-icon decorative="" icon-name="external-link"></gux-icon>
    <slot></slot>
    <slot></slot>
  </mock:shadow-root>
  <a href="#">
    Default Link
  </a>
</gux-anchor-beta>
`;

exports[`gux-anchor-beta #render should render component as expected (2) 1`] = `
<gux-anchor-beta table="false">
  <mock:shadow-root>
    <gux-icon decorative="" icon-name="external-link"></gux-icon>
    <slot></slot>
    <slot></slot>
  </mock:shadow-root>
  <a href="#" target="_blank">
    Open in new tab
  </a>
</gux-anchor-beta>
`;

exports[`gux-anchor-beta #render should render component as expected (3) 1`] = `
<gux-anchor-beta table="false">
  <mock:shadow-root>
    <gux-icon decorative="" icon-name="external-link"></gux-icon>
    <slot></slot>
    <slot></slot>
  </mock:shadow-root>
  <a href="https://spark.genesys.com/" target="_blank">
    External Link
  </a>
</gux-anchor-beta>
`;

exports[`gux-anchor-beta #render should render component as expected (4) 1`] = `
<gux-anchor-beta table="true">
  <mock:shadow-root>
    <gux-icon decorative="" icon-name="external-link"></gux-icon>
    <slot></slot>
    <slot></slot>
  </mock:shadow-root>
  <a href="#">
    Tabel Cell Link
  </a>
</gux-anchor-beta>
`;
